elimiinado los archivos instalados de test

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "@types/cookie": "^0.5.1",
     "@types/deep-equal": "^1.0.1",
     "@types/js-cookie": "^3.0.3",
