--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "build:win32": "nextron build --win --ia32",
     "build:win64": "nextron build --win --x64",
     "build:mac": "nextron build --mac --x64",
-    "build:linux": "nextron build --linux",
-    "prepare": "husky install"
+    "build:linux": "nextron build --linux"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
@@ -53,7 +52,6 @@
     "electron": "^21.3.3",
     "electron-builder": "^23.6.0",
     "eslint": "^8.45.0",
-    "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "next": "^12.3.4",
     "nextron": "^8.5.0",
@@ -62,8 +60,5 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.4"
-  },
-  "lint-staged": {
-    "*.{js,css,md}": "prettier --write"
   }
 }
