--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "strapi-sdk-js": "^2.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.0",
+    "thermal-printer-encoder": "^2.0.0",
     "use-debounce": "^9.0.4",
     "yup": "^1.1.1"
   },
