--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "deep-equal": "^2.2.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
+    "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
@@ -35,21 +38,26 @@
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^9.1.3",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "strapi-sdk-js": "^2.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "5.0.2",
+    "thermal-printer-encoder": "^2.0.0",
     "use-debounce": "^9.0.4",
     "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
     "@types/deep-equal": "^1.0.1",
+    "@types/escpos": "^2.5.2",
+    "@types/express": "^4.17.17",
     "@types/js-cookie": "^3.0.3",
     "@types/next-auth": "^3.15.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
+    "@types/socket.io": "^3.0.2",
     "electron": "^21.3.3",
     "electron-builder": "^23.6.0",
     "eslint": "^8.45.0",
@@ -59,9 +67,10 @@
     "nextron": "^8.5.0",
     "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "5.0.2"
+  },
+  "resolutions": {
+    "usb": "1.8.8"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
