--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-toastify": "^9.1.3",
+
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "strapi-sdk-js": "^2.2.0",
