--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "tailwindcss": "^3.3.0",
     "thermal-printer-encoder": "^2.0.0",
     "use-debounce": "^9.0.4",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
