--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-table": "^8.10.6",
     "autoprefixer": "^10.4.14",
     "cookie": "^0.5.0",
     "daisyui": "^2.51.5",
