--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Cristian T. Torres <crisitantomastorres@gmail.com>",
   "main": "app/background.js",
   "scripts": {
+    "start": "next renderer",
     "dev": "nextron",
     "build": "nextron build",
     "postinstall": "electron-builder install-app-deps",
@@ -21,6 +22,7 @@
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-table": "^8.10.6",
     "autoprefixer": "^10.4.14",
     "cookie": "^0.5.0",
     "daisyui": "^2.51.5",
