--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "deep-equal": "^2.2.0",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
-    "escpos": "^3.0.0-alpha.6",
-    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
@@ -75,7 +73,9 @@
     "nextron": "^8.5.0",
     "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4"
   },
   "resolutions": {
     "usb": "1.8.8"
