--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "main": "app/background.js",
   "scripts": {
     "start": "next start ./renderer",
-    "dev": "nextron",
+    "dev": "next ./renderer",
     "build:web": "next build ./renderer",
     "build": "npm run build:web",
     "build:nextron": "nextron build",
-    "postinstall": "electron-builder install-app-deps",
     "build:all": "nextron build --all",
     "build:win32": "nextron build --win --ia32",
     "build:win64": "nextron build --win --x64",
@@ -32,7 +31,7 @@
     "deep-equal": "^2.2.0",
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
-    "next": "13.2.4",
+    "next": "^13.5.6",
     "next-auth": "^4.21.1",
     "postcss": "^8.4.21",
     "react": "18.2.0",
@@ -64,7 +63,6 @@
     "eslint": "^8.45.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
-    "next": "^12.3.4",
     "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "typescript": "5.0.2"
