--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test": "cypress open"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.32.0",
@@ -29,6 +31,11 @@
     "daisyui": "^2.51.5",
     "date-fns": "^2.30.0",
     "deep-equal": "^2.2.0",
+    "electron-serve": "^1.1.0",
+    "electron-store": "^8.1.0",
+    "emoji-mart": "^5.5.2",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "next": "^13.5.6",
@@ -39,6 +46,7 @@
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^9.1.3",
+    "react-uploader": "^3.43.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "strapi-sdk-js": "^2.2.0",
