--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "cajaregistradora-desktop",
   "description": "My application description",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "author": "Cristian T. Torres <crisitantomastorres@gmail.com>",
   "main": "app/background.js",
   "scripts": {
@@ -22,7 +22,6 @@
   "dependencies": {
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
-    "react-uploader": "^3.43.0",
     "@heroicons/react": "^2.0.16",
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/react-query": "^4.32.0",
@@ -32,6 +31,7 @@
     "daisyui": "^2.51.5",
     "date-fns": "^2.30.0",
     "deep-equal": "^2.2.0",
+    "emoji-mart": "^5.5.2",
     "express": "^4.18.2",
     "js-cookie": "^3.0.1",
     "next": "^13.5.6",
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-toastify": "^9.1.3",
+    "react-uploader": "^3.43.0",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "strapi-sdk-js": "^2.2.0",
