--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "daisyui": "^2.51.5",
     "date-fns": "^2.30.0",
     "deep-equal": "^2.2.0",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.7",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "emoji-mart": "^5.5.2",
@@ -41,6 +43,7 @@
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "next-auth": "^4.21.1",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
