--- a/package.json
+++ b/package.json
@@ -20,55 +20,55 @@
     "test": "cypress open"
   },
   "dependencies": {
-    "@emoji-mart/data": "^1.1.2",
-    "@emoji-mart/react": "^1.1.1",
-    "@heroicons/react": "^2.0.16",
-    "@hookform/resolvers": "^3.1.0",
-    "@tanstack/react-query": "^4.32.0",
-    "@tanstack/react-table": "^8.10.6",
-    "autoprefixer": "^10.4.14",
-    "cookie": "^0.5.0",
-    "daisyui": "^2.51.5",
-    "date-fns": "^2.30.0",
-    "deep-equal": "^2.2.0",
-    "emoji-mart": "^5.5.2",
-    "express": "^4.18.2",
-    "js-cookie": "^3.0.1",
-    "next": "^13.5.6",
-    "next-auth": "^4.21.1",
-    "postcss": "^8.4.21",
+    "@emoji-mart/data": "1.1.2",
+    "@emoji-mart/react": "1.1.1",
+    "@heroicons/react": "2.0.16",
+    "@hookform/resolvers": "3.1.0",
+    "@tanstack/react-query": "4.32.0",
+    "@tanstack/react-table": "8.10.6",
+    "autoprefixer": "10.4.14",
+    "cookie": "0.5.0",
+    "daisyui": "2.51.5",
+    "date-fns": "2.30.0",
+    "deep-equal": "2.2.0",
+    "emoji-mart": "5.5.2",
+    "express": "4.18.2",
+    "js-cookie": "3.0.1",
+    "next": "13.5.6",
+    "next-auth": "4.21.1",
+    "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-infinite-scroll-component": "^6.1.0",
-    "react-toastify": "^9.1.3",
-    "react-uploader": "^3.43.0",
-    "socket.io": "^4.7.1",
-    "socket.io-client": "^4.7.1",
-    "strapi-sdk-js": "^2.2.0",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.3.0",
-    "use-debounce": "^9.0.4",
-    "yup": "^1.1.1",
-    "zustand": "^4.4.1"
+    "react-hook-form": "7.43.9",
+    "react-infinite-scroll-component": "6.1.0",
+    "react-toastify": "9.1.3",
+    "react-uploader": "3.43.0",
+    "socket.io": "4.7.1",
+    "socket.io-client": "4.7.1",
+    "strapi-sdk-js": "2.2.0",
+    "tailwind-merge": "1.12.0",
+    "tailwindcss": "3.3.0",
+    "use-debounce": "9.0.4",
+    "yup": "1.1.1",
+    "zustand": "4.4.1"
   },
   "devDependencies": {
-    "@types/cookie": "^0.5.1",
-    "@types/deep-equal": "^1.0.1",
-    "@types/express": "^4.17.17",
-    "@types/js-cookie": "^3.0.3",
-    "@types/next-auth": "^3.15.0",
+    "@types/cookie": "0.5.1",
+    "@types/deep-equal": "1.0.1",
+    "@types/express": "4.17.17",
+    "@types/js-cookie": "3.0.3",
+    "@types/next-auth": "3.15.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
-    "@types/socket.io": "^3.0.2",
-    "@types/yup": "^0.32.0",
-    "cypress": "^13.3.0",
-    "eslint": "^8.45.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
+    "@types/socket.io": "3.0.2",
+    "@types/yup": "0.32.0",
+    "cypress": "13.3.0",
+    "eslint": "8.45.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.3",
     "prettier": "3.0.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "typescript": "5.0.2"
   },
   "lint-staged": {
