fix:no se puede cerrar caja si hay tickets y expensas pendientes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "cajaregistradora-desktop",
+  "name": "caja-registradora",
   "description": "Caja Registradora App",
   "version": "0.3.1",
   "author": "Cristian T. Torres <crisitantomastorres@gmail.com>",
