--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@tanstack/react-table": "8.10.6",
     "autoprefixer": "10.4.14",
     "cookie": "0.5.0",
-    "daisyui": "2.51.5",
+    "daisyui": "^4.5.0",
     "date-fns": "2.30.0",
     "deep-equal": "2.2.0",
     "emoji-mart": "5.5.2",
