--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "escpos-usb": "3.0.0-alpha.4",
     "express": "4.18.2",
     "js-cookie": "3.0.1",
-    "next": "13.2.4",
+    "lightweight-charts": "^4.1.1",
+    "next": "13.5.6",
     "next-auth": "4.21.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
