--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
   "resolutions": {
     "usb": "1.8.8",
     "@types/react": "17.0.14",
-    "@types/react-dom": "17.0.14"
+    "@types/react-dom": "17.0.14",
+    "jackspeak": "2.1.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
