--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-auth": "4.21.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
     "react-infinite-scroll-component": "6.1.0",
