--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "name": "caja-registradora",
-  "description": "Caja Registradora App",
-  "version": "0.4.1",
+  "description": "Caja Registradora",
+  "version": "0.5.0",
   "author": "Cristian T. Torres <crisitantomastorres@gmail.com>",
   "main": "app/background.js",
   "scripts": {
