--- a/package.json
+++ b/package.json
@@ -6,19 +6,17 @@
   "author": "Cristian T. Torres <crisitantomastorres@gmail.com>",
   "main": "app/background.js",
   "scripts": {
-    "start": "next ./renderer",
-    "dev": "nextron .",
-    "build:web": "next renderer",
-    "build": "yarn build:nextron",
+    "start": "next start ./renderer",
+    "dev": "next ./renderer",
+    "build:web": "next build ./renderer",
+    "build": "npm run build:web",
     "build:nextron": "nextron build",
-    "postinstall": "electron-builder install-app-deps",
     "build:all": "nextron build --all",
     "build:win32": "nextron build --win --ia32",
     "build:win64": "nextron build --win --x64",
     "build:mac": "nextron build --mac --x64",
     "build:linux": "nextron build --linux",
-    "prepare": "husky install",
-    "test": "cypress open"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emoji-mart/data": "1.1.2",
@@ -29,21 +27,16 @@
     "@tanstack/react-table": "8.10.6",
     "autoprefixer": "10.4.14",
     "cookie": "0.5.0",
-    "daisyui": "3.9.4",
+    "daisyui": "2.51.5",
     "date-fns": "2.30.0",
     "deep-equal": "2.2.0",
-    "electron-serve": "1.1.0",
-    "electron-store": "8.1.0",
     "emoji-mart": "5.5.2",
-    "escpos": "3.0.0-alpha.6",
-    "escpos-usb": "3.0.0-alpha.4",
     "express": "4.18.2",
     "js-cookie": "3.0.1",
-    "next": "13.2.4",
+    "next": "13.5.6",
     "next-auth": "4.21.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
-    "react-calendar": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.9",
     "react-infinite-scroll-component": "6.1.0",
@@ -54,7 +47,6 @@
     "strapi-sdk-js": "2.2.0",
     "tailwind-merge": "1.12.0",
     "tailwindcss": "3.3.0",
-    "thermal-printer-encoder": "2.0.0",
     "use-debounce": "9.0.4",
     "yup": "1.1.1",
     "zustand": "4.4.1"
@@ -62,37 +54,22 @@
   "devDependencies": {
     "@types/cookie": "0.5.1",
     "@types/deep-equal": "1.0.1",
-    "@types/escpos": "2.5.2",
     "@types/express": "4.17.17",
     "@types/js-cookie": "3.0.3",
-    "@types/json-schema": "^7.0.15",
     "@types/next-auth": "3.15.0",
     "@types/node": "18.15.10",
     "@types/react": "18.0.30",
     "@types/react-dom": "18.0.11",
     "@types/socket.io": "3.0.2",
     "@types/yup": "0.32.0",
-    "electron": "21.3.3",
-    "electron-builder": "23.6.0",
     "eslint": "8.45.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.3",
-    "next": "12.3.4",
-    "nextron": "8.5.0",
     "prettier": "3.0.0",
     "prettier-plugin-tailwindcss": "0.3.0",
     "typescript": "5.0.2"
   },
-  "resolutions": {
-    "usb": "1.8.8",
-    "@types/react": "17.0.14",
-    "@types/react-dom": "17.0.14",
-    "jackspeak": "2.1.1"
-  },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
-  },
-  "overrides": {
-    "usb": "1.9.2"
   }
 }
